--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -6,47 +6,137 @@
 
 .header {
   background: var(--header-bg-color);
+  @include abstracts.breakpoint(lg) {
+    box-shadow: 0px 20px 60px 10px var(--header-shadow-color);
+  }
 }
 
 .top-bar {
   @extend %flexItemCenter;
+  position: relative;
   padding: 30px 0;
   @include abstracts.breakpoint(lg) {
     padding: 20px 0;
   }
-  @include abstracts.breakpoint(sm) {
+  @include abstracts.breakpoint(md) {
     padding: 16px 0;
     justify-content: space-between;
-  }
-  &__more {
-    display: none;
-    @include abstracts.breakpoint(lg) {
-      display: block;
-    }
   }
 }
 
 .navbar {
-  margin-left: 144px;
+  margin-left: 129px;
   @include abstracts.breakpoint(xl) {
-    margin-left: 50px;
+    margin-left: 28px;
   }
   @include abstracts.breakpoint(lg) {
-    display: none;
+    position: fixed;
+    inset: 0 50% 0 0;
+    background: var(--sidebar-bg);
+    margin-left: 0;
+    z-index: 9;
+    padding: 20px 0;
+    border-radius: 0 20px 20px 0;
+    translate: -100%;
+    transition: translate 0.5s;
+    &.show {
+      box-shadow: 0 40px 90px 20px var(--sidebar-shadow);
+      translate: 0;
+    }
+    &.show ~ &__overlay {
+      visibility: visible;
+      opacity: 1;
+    }
+    @include abstracts.breakpoint(sm) {
+      inset: 0 20% 0 0;
+    }
   }
   &__list {
     @extend %flexItemCenter;
-    gap: 30px;
+    @include abstracts.breakpoint(lg) {
+      flex-direction: column;
+      align-items: flex-start;
+      overflow: auto;
+      overscroll-behavior: contain;
+      height: calc(100% - 40px);
+    }
+    @include abstracts.breakpoint(md) {
+      height: calc(100% - 140px);
+    }
+
+    @include abstracts.breakpoint(sm) {
+      height: calc(100% - 120px);
+    }
   }
+
+  &__close-btn {
+    display: none;
+    @include abstracts.breakpoint(lg) {
+      display: block;
+      padding: 10px 40px;
+    }
+    @include abstracts.breakpoint(sm) {
+      padding: 0 20px 10px;
+    }
+  }
+
+  &__overlay {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility, opacity;
+    transition-duration: 0.5s;
+    @include abstracts.breakpoint(lg) {
+      background: rgba($color: #000000, $alpha: 0.4);
+      position: fixed;
+      inset: 0;
+      z-index: 8;
+    }
+  }
+
+  &__item {
+    &:hover .dropdown {
+      display: block;
+    }
+    @include abstracts.breakpoint(lg) {
+      width: 100%;
+      &:hover .dropdown {
+        display: none;
+      }
+      &--active .dropdown {
+        display: block !important;
+      }
+    }
+  }
+
   &__link {
     @extend %flexItemCenter;
     gap: 6px;
+    height: 50px;
+    padding: 0 15px;
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 146.667%;
+    @include abstracts.breakpoint(lg) {
+      padding: 0 40px;
+      font-size: 1.6rem;
+      line-height: 150%;
+      justify-content: space-between;
+    }
+    @include abstracts.breakpoint(sm) {
+      height: 44px;
+      padding: 0 20px;
+    }
   }
   &__arrow {
     margin-top: 3px;
+
+    @include abstracts.breakpoint(lg) {
+      rotate: -90deg;
+      transition: rotate 0.3s;
+    }
+  }
+  &__item--active &__arrow {
+    rotate: 0deg;
   }
 }
 
@@ -54,7 +144,7 @@
   @extend %flexItemCenter;
   gap: 20px;
   margin-left: auto;
-  @include abstracts.breakpoint(sm) {
+  @include abstracts.breakpoint(md) {
     margin-left: 0;
   }
   &__group {
@@ -64,9 +154,6 @@
     height: 50px;
     background: var(--top-act-group-bg-color);
     box-shadow: 0px 20px 60px 10px var(--top-act-group-shadow);
-    @include abstracts.breakpoint(md) {
-      display: none;
-    }
   }
 
   &__group--single {
@@ -101,5 +188,25 @@
     height: 50px;
     border-radius: 8px;
     cursor: pointer;
+  }
+}
+
+.nav-btn {
+  height: 50px;
+  padding: 0 40px;
+  align-items: center;
+  @include abstracts.breakpoint(sm) {
+    height: 44px;
+    padding: 0 20px;
+  }
+  &__title,
+  &__qnt {
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 146.667%;
+  }
+  &__title {
+    margin-left: 16px;
+    margin-right: auto;
   }
 }
