--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -10,5 +10,15 @@ html {
   --top-act-group-seperate: #ededf6;
   @include abstracts.breakpoint(lg) {
     --header-bg-color: #fff;
+    --header-shadow-color: rgba(237, 237, 246, 0.2);
   }
+
+  // Dropdown
+  --dropdown-bg-color: #fff;
+  --dropdown-shadow-color: rgba(200, 200, 200, 0.4);
+  --top-menu-border-color: #d2d1d6;
+
+  // Sidebar
+  --sidebar-bg: #fff;
+  --sidebar-shadow: rgba(200, 200, 200, 0.4);
 }
