--- a/scss/base/_grid.scss
+++ b/scss/base/_grid.scss
@@ -1,19 +1,18 @@
 @use "sass:math";
 // Breakpoints, dimensions, container, row, column, v.v
 $grid-breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
   xxl: 1400px,
+  xl: 1200px,
+  lg: 992px,
+  md: 768px,
+  sm: 576px,
 );
 $container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px,
-  xxl: 1370px,
+  sm: 100%,
+  md: 540px,
+  lg: 720px,
+  xl: 960px,
+  xxl: 1140px,
 );
 $grid-columns: 12;
 $grid-gutter-width: 30px !default;
@@ -42,6 +41,7 @@ $gutters: (
 
 .container {
   @extend .container-fluid;
+  width: 1370px;
 }
 
 .row {
@@ -60,17 +60,13 @@ $gutters: (
   flex: 1 0;
 }
 
-@mixin make-media-query($dimensiton, $bypass: false) {
-  @if ($bypass) {
+@mixin make-media-query($dimensiton) {
+  @media (max-width: ( $dimensiton - 0.02)) {
     @content;
-  } @else {
-    @media (min-width: $dimensiton) {
-      @content;
-    }
   }
 }
 
-@mixin make-row-columns($infix) {
+@mixin make-row-columns($infix: null) {
   @for $i from 1 through $grid-columns * 0.5 {
     .row-cols#{$infix}-#{$i} > * {
       flex: 0 0 auto;
@@ -79,7 +75,7 @@ $gutters: (
   }
 }
 
-@mixin make-columns($infix) {
+@mixin make-columns($infix: null) {
   @for $i from 1 through $grid-columns {
     .col#{$infix}-#{$i} {
       flex: 0 0 auto;
@@ -88,7 +84,7 @@ $gutters: (
   }
 }
 
-@mixin make-offsets($infix) {
+@mixin make-offsets($infix: null) {
   @for $i from 0 to $grid-columns {
     .offset#{$infix}-#{$i} {
       margin-left: if($i == 0, 0, math.div(100%, $grid-columns) * $i);
@@ -96,7 +92,7 @@ $gutters: (
   }
 }
 
-@mixin make-gutter($infix) {
+@mixin make-gutter($infix: null) {
   @each $i, $ratio in $gutters {
     .g#{$infix}-#{$i},
     .gx#{$infix}-#{$i} {
@@ -108,12 +104,16 @@ $gutters: (
     }
   }
 }
+@include make-row-columns();
+@include make-columns();
+@include make-offsets();
+@include make-gutter();
 
 @each $breakpoint, $dimensiton in $grid-breakpoints {
   $max-width: map-get($container-max-widths, $breakpoint);
   $isXs: $breakpoint == xs;
-  $infix: if($isXs, "", "-#{$breakpoint}");
-  @include make-media-query($dimensiton, $isXs) {
+  $infix: "-#{$breakpoint}";
+  @include make-media-query($dimensiton) {
     .container {
       max-width: $max-width;
     }
