--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -5,7 +5,7 @@
   width: min(1240px, 100%);
   padding-top: 54px;
   display: none;
-  @include abstracts.breakpoint(lg) {
+  @include abstracts.screen(lg) {
     position: initial;
     padding-top: 0;
   }
@@ -24,7 +24,7 @@
       translate: -50%;
       filter: var(--dropdown-arrow-color);
     }
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       padding: 0 40px;
       border-radius: 0;
       background: transparent;
@@ -33,7 +33,7 @@
         content: none;
       }
     }
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
       padding: 0 20px;
     }
   }
@@ -48,7 +48,7 @@
     height: var(--max-inner-height);
     border-right: 1px solid var(--top-menu-border-color);
     overflow-y: auto;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       width: 100%;
       height: auto;
       border-right: none;
@@ -62,7 +62,7 @@
   + .menu-column {
     margin-top: 18px;
   }
-  @include abstracts.breakpoint(lg) {
+  @include abstracts.screen(lg) {
     margin-top: 10px;
   }
   &__icon {
@@ -70,10 +70,10 @@
     flex-shrink: 0;
     width: 36px;
     height: 36px;
-    @include abstracts.breakpoint(xl) {
+    @include abstracts.screen(xl) {
       display: none;
     }
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       display: block;
     }
   }
@@ -99,13 +99,13 @@
     font-size: 1.6rem;
     font-weight: 500;
     line-height: 150%;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       margin-bottom: 26px;
     }
   }
   &__list {
     margin-top: 19px;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       margin-top: 0;
     }
   }
@@ -139,7 +139,7 @@
   gap: var(--inner-padding);
   overflow-y: auto;
 
-  @include abstracts.breakpoint(lg) {
+  @include abstracts.screen(lg) {
     position: initial;
     grid-template-columns: 1fr;
     padding-left: 0;
@@ -152,7 +152,7 @@
     grid-template-columns: repeat(4, 1fr);
     height: var(--max-inner-height);
     padding-left: 0;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       grid-template-columns: 1fr;
       height: auto;
     }
