--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -6,7 +6,7 @@
 
 .header {
   background: var(--header-bg-color);
-  @include abstracts.breakpoint(lg) {
+  @include abstracts.screen(lg) {
     box-shadow: 0px 20px 60px 10px var(--header-shadow-color);
   }
 }
@@ -14,11 +14,12 @@
 .top-bar {
   @extend %flexItemCenter;
   position: relative;
+  z-index: 1;
   padding: 30px 0;
-  @include abstracts.breakpoint(lg) {
+  @include abstracts.screen(lg) {
     padding: 20px 0;
   }
-  @include abstracts.breakpoint(md) {
+  @include abstracts.screen(md) {
     padding: 16px 0;
     justify-content: space-between;
   }
@@ -26,10 +27,10 @@
 
 .navbar {
   margin-left: 129px;
-  @include abstracts.breakpoint(xl) {
+  @include abstracts.screen(xl) {
     margin-left: 28px;
   }
-  @include abstracts.breakpoint(lg) {
+  @include abstracts.screen(lg) {
     position: fixed;
     inset: 0 50% 0 0;
     background: var(--sidebar-bg);
@@ -47,35 +48,35 @@
       visibility: visible;
       opacity: 1;
     }
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
       inset: 0 20% 0 0;
     }
   }
   &__list {
     @extend %flexItemCenter;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       flex-direction: column;
       align-items: flex-start;
       overflow: auto;
       overscroll-behavior: contain;
       height: calc(100% - 40px);
     }
-    @include abstracts.breakpoint(md) {
+    @include abstracts.screen(md) {
       height: calc(100% - 140px);
     }
 
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
       height: calc(100% - 120px);
     }
   }
 
   &__close-btn {
     display: none;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       display: block;
       padding: 10px 40px;
     }
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
       padding: 0 20px 10px;
     }
   }
@@ -85,7 +86,7 @@
     opacity: 0;
     transition: visibility, opacity;
     transition-duration: 0.5s;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       background: rgba($color: #000000, $alpha: 0.4);
       position: fixed;
       inset: 0;
@@ -97,7 +98,7 @@
     &:hover .dropdown {
       display: block;
     }
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       width: 100%;
       &:hover .dropdown {
         display: none;
@@ -116,13 +117,13 @@
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 146.667%;
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       padding: 0 40px;
       font-size: 1.6rem;
       line-height: 150%;
       justify-content: space-between;
     }
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
       height: 44px;
       padding: 0 20px;
     }
@@ -130,7 +131,7 @@
   &__arrow {
     margin-top: 3px;
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       rotate: -90deg;
       transition: rotate 0.3s;
     }
@@ -144,7 +145,7 @@
   @extend %flexItemCenter;
   gap: 20px;
   margin-left: auto;
-  @include abstracts.breakpoint(md) {
+  @include abstracts.screen(md) {
     margin-left: 0;
   }
   &__group {
@@ -157,7 +158,7 @@
   }
 
   &__group--single {
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       display: none;
     }
   }
@@ -195,7 +196,7 @@
   height: 50px;
   padding: 0 40px;
   align-items: center;
-  @include abstracts.breakpoint(sm) {
+  @include abstracts.screen(sm) {
     height: 44px;
     padding: 0 20px;
   }
